# ARIEL

./: .gitignore_old  .gitmodules  CMakeLists.txt  README.md  corecontroller.cpp  corecontroller.h  coregui.cpp  coregui.h  dialog_failure.cpp  dialog_failure.h  dialog_failure.ui  dialog_filemanager.cpp  dialog_filemanager.h  dialog_filemanager.ui  dialog_searchfile.h  dialog_searchfile.ui  dialog_selectimage_file.cpp  dialog_selectimage_file.h  dialog_selectimage_file.ui  dialog_success.cpp  dialog_success.h  dialog_success.ui  dialog_warning.cpp  dialog_warning.h  dialog_warning.ui  findstub.json  imagefileoperationmanager.cpp  imagefileoperationmanager.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_bkp.ui  make.sh  newuser.sh  rsc_file.qrc  setup.sh  (+3 more)
ARIEL/: CMakeLists.txt  UI_API.cpp  UI_API.h  authentication.cpp  corecontroller.cpp  corecontroller.h  coregui.h  dialog_searchfile.cpp  iauthentication.h  loginwindow.cpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rsc_file.qrc  setup.sh
GUI_autogen/: mocs_compilation.cpp
GUI_autogen/EWIEGA46WW/: moc_corecontroller.cpp.d  moc_coregui.cpp.d  moc_dialog_failure.cpp.d  moc_dialog_filemanager.cpp.d  moc_dialog_selectimage_file.cpp.d  moc_imagefileoperationmanager.cpp.d  moc_loginwindow.cpp.d  moc_mainwindow.cpp.d  moc_usermanager.cpp.d
build-ARIEL-Desktop-Debug/ARIEL_autogen/EWIEGA46WW/: qrc_rsc_file.cpp
build-ARIEL-Desktop-Debug/ARIEL_autogen/include/: ui_dialog_searchfile.h  ui_loginwindow.h  ui_mainwindow.h
certificate/: pescert.crt
